codepkg/objects/Product_Distribution_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Quantity_Distribution__c</fullName>
        <label>Actual Quantity Distribution</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Distribution Plans (County)</relationshipLabel>
        <relationshipName>Product_Distribution_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Distribution Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Distribution Plans</relationshipLabel>
        <relationshipName>Product_Distribution_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <label>Order Product</label>
        <referenceTo>Order_Product__c</referenceTo>
        <relationshipLabel>Product Distribution Plans</relationshipLabel>
        <relationshipName>Product_Distribution_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposed_Quantity_Distribution__c</fullName>
        <label>Proposed Quantity Distribution</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Distribution Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PDP-{00000000}</displayFormat>
        <label>Product Distribution Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Distribution Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>